--- a/Makefile_back
+++ b/Makefile_back
@@ -6,16 +6,18 @@ SHADERSCOMPILER = glslangValidator
 
 CXXFLAGS = -std=c++17 -fopenmp -O0 -g -Wall -Warray-bounds -Wdiv-by-zero -fno-omit-frame-pointer
 CXXFLAGS += -DDEBUG
-CXXFLAGS += -fsanitize=address -fsanitize=undefined -fsanitize=bounds -fsanitize=bounds-strict
+#CXXFLAGS += -fsanitize=address -fsanitize=undefined -fsanitize=bounds -fsanitize=bounds-strict
 
-LDFLAGS = -lgomp -lvulkan `pkg-config --static --libs glfw3`
+LDFLAGS = -lgomp -lvulkan -lglfw
 
 VPATH += VK-nn/Vulkan
 VPATH += VisualEngine
+VPATH += VK-nn/libs
 
 SOURCE = main.cpp
 
 SOURCE += $(wildcard VK-nn/Vulkan/*.cpp)
+SOURCE += $(wildcard VK-nn/libs/*.cpp)
 SOURCE += $(wildcard VisualEngine/*.cpp)
 
 OBJECTS = $(notdir $(SOURCE:.cpp=.o))
